--- a/src/components/Intro/Intro.styles.css
+++ b/src/components/Intro/Intro.styles.css
@@ -2,9 +2,9 @@
   height: 100vh;
   width: 100vw;
 
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  display: grid;
+  place-items: center;
+  text-align: center;
   font-size: 5em;
   color: white;
   text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5);
